osha.theme Changelog
====================

1.5.35 (unreleased)
-------------------

- On the events portlets, use getObject instead of catalog brains to
  make it work also in subsites #7941 [pysailor]

1.5.34 (2013-07-09)
-------------------

- #7815: Practical solutions: set section image width to 50px
  [deroiste]
- #7210: Change domain for site_admin on default_error_message.pt
  [deroiste]


1.5.33 (2013-07-08)
-------------------

- Don't show OSHMails or News that are both expired and outdated in
  listings #7912, #7913 [pysailor]
- #7814 Wrap the agency name on the homepage, except for el, hu & pl
  [deroiste]
- crop OSHA in the media clipping #7936 [pysailor]
- only display events from /en/events #7932 [pysailor]
- enhanced oshnews simple view and created oshnews-view-fop: both views
  DO NOT use the language fallback. To be used in fop pages where EN is
  not canonical #7937 [pysailor]
- Updated logo in HR #7918 [pysailor]
- Publications: Added language fallback for carousel and keywords #7923 [pysailor]



1.5.32 (2013-06-28)
-------------------

- Osh news portlet: guard against stale catalog entries [pysailor]


1.5.31 (2013-06-28)
-------------------

- Fixed task #7854: default_error_message raised an error.
- Add version param to highlights-carousel.js on homepage, and remove
  the twitter-loader JS, since it has been replaced [deroiste]


1.5.30 (2013-06-24)
-------------------

- remove the first paragraph added to each napo film, on the description
  pages #7467 [thomasw]
- #7379 #7602 #7379 Replace the server side truncation of the teaser
  text on the home page, also for the competitions view with
  JavaScript (jQuery.dotdotdot) [deroiste]
- #7634, #7508, #7488: Made News listing, Event/Seminar listsings and
  publications listings show untranslated documents as fallback. [regebro]
- don't call get_faqs in __init__ of OSHAHelpCenterView. Attempt
  to fix post-Hotfix SNAFU [pysailor]
- Add collective.portlet.twitter [jure, pysailor]
