@@ -134,6 +134,13 @@ class Renderer(events.Renderer):
     def render(self):
         return xhtml_compress(self._template())
 
+
+    @ram.cache(_render_cachekey)
+    @property
+    def available(self):
+        return len(self._data())
+
+
     # Add respect to INavigationRoot
     @memoize
     def _data(self):
